--- a/src/index.css
+++ b/src/index.css
@@ -32,25 +32,25 @@ body {
 }
 
 h1 {
-  color:#4e3f3f;
+  color:#0f2916;
   font-size: 3.2em;
   line-height: 1.1;
   margin-left:1000;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border-radius: 10px;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #0f2916;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #6992be;
 }
 button:focus,
 button:focus-visible {
